Fixed jersey classpath issues and java module stuff